--- a/Toàn cầu/Hoạt động - Nguồn khác - Võ Văn Hoan.html
+++ b/Toàn cầu/Hoạt động - Nguồn khác - Võ Văn Hoan.html
@@ -206,18 +206,18 @@
             <#list entries as curEntry>
                 <#assign renderer = curEntry.getAssetRenderer()
                 className = renderer.getClassName() />
-                <#if className == "com.liferay.journal.model.JournalArticle" && indexLocal &lt; 1>
+                <#if className == "com.liferay.journal.model.JournalArticle" && indexLocal < 1>
                     <#assign title = curEntry.getTitle(locale)
                     displayDate = article.getDisplayDate()?datetime
                     createTime = dateUtil.getDate(displayDate, dateFormatTime, locale)
-                        createDay = dateUtil.getDate(displayDate, dateFormatDay, locale)
-						createMonth = dateUtil.getDate(displayDate, monthFormatDay, locale)
-						createYear = dateUtil.getDate(displayDate, yearFormatDay, locale)
+                    createDay = dateUtil.getDate(displayDate, dateFormatDay, locale)
+					createMonth = dateUtil.getDate(displayDate, monthFormatDay, locale)
+					createYear = dateUtil.getDate(displayDate, yearFormatDay, locale)
                     article = renderer.getArticle()
                     description = article.getDescription(locale)
                     ddmTemplateKey = article.getDDMTemplateKey()
                     curEntry = curEntry
-                    viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/-/${renderer.getUrlTitle()}"
+                    viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/chi-tiet/-/asset_publisher/gNtPHVXU0nxC/content/${renderer.getUrlTitle()}/39403"
                     indexLocal = indexLocal + 1 />
                     <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                         <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
@@ -233,7 +233,9 @@
                             <div class="col-12 limit-tin-desc-news-3">
                                 <div class="hoat-dong-moi-nhat-left hd-nguon-khac-pct">
                                     <div class="limit-tin-desc-2 main-color-pct-nguon-khac">
-                                        <p class="makeshortnews-pct-thuy asset-publisher-title font-merri mb-1 font-weight-bold mb-2 limit-3-lines">${title}</p>
+                                        <p class="makeshortnews-pct-thuy asset-publisher-title font-merri mb-1 font-weight-bold mb-2 limit-3-lines">
+                                            ${title?html} 
+                                        </p>
                                     </div>
                                     <p class="text-ngaythang d-flex align-items-center justify-content-between" >
                                         <span style="color: #686868;">${createTime} | ${createDay}/${createMonth}/${createYear}</span></p>
@@ -250,18 +252,19 @@
                 <#assign
                 renderer = curEntry.getAssetRenderer()
                 className = renderer.getClassName() />
-                <#if className == "com.liferay.journal.model.JournalArticle" && curEntry.getAvailableLanguageIds()?seq_contains(locale) && indexLocal &lt; 3>
+                <#if className == "com.liferay.journal.model.JournalArticle" && curEntry.getAvailableLanguageIds()?seq_contains(locale) && indexLocal < 3>
                     <#assign
                     title = curEntry.getTitle(locale)
-                    createDay = dateUtil.getDate(curEntry.getCreateDate(), dateFormatDay, locale)
-                    createMonth = dateUtil.getDate(curEntry.getCreateDate(), monthFormatDay, locale)
-                    createYear = dateUtil.getDate(curEntry.getCreateDate(), yearFormatDay, locale)
-                    createTime = dateUtil.getDate(curEntry.getCreateDate(), dateFormatTime, locale)
+                    displayDate = article.getDisplayDate()?datetime
+                    createTime = dateUtil.getDate(displayDate, dateFormatTime, locale)
+                    createDay = dateUtil.getDate(displayDate, dateFormatDay, locale)
+					createMonth = dateUtil.getDate(displayDate, monthFormatDay, locale)
+					createYear = dateUtil.getDate(displayDate, yearFormatDay, locale)
                     article = renderer.getArticle()
                     description = article.getDescription(locale)
                     ddmTemplateKey = article.getDDMTemplateKey()
                     curEntry = curEntry
-                    viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/-/${renderer.getUrlTitle()}"
+                    viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/chi-tiet/-/asset_publisher/gNtPHVXU0nxC/content/${renderer.getUrlTitle()}/39403"
                     indexLocal = indexLocal + 1 />
                     <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                         <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
@@ -275,7 +278,9 @@
                             <div class="col-8 limit-tin-desc-news-3 p-0">
                                 <div class="hoat-dong-khac hoat-dong-khac-tin-nho">
                                     <div class="limit-tin-desc-2 main-color-pct-nguon-khac">
-                                        <p class="makeshortnews-pct-thuy asset-publisher-title font-merri mb-4 font-weight-bold limit-3-lines">${title}</p>
+                                        <p class="makeshortnews-pct-thuy asset-publisher-title font-merri mb-4 font-weight-bold limit-3-lines">
+                                            ${title?html} 
+                                        </p>
                                     </div>
                                     <p class="text-ngaythang d-flex align-items-center justify-content-between"
                                        style="position: absolute; bottom: -8%; width: 85%;">
@@ -284,15 +289,6 @@
                             </div>
                         </a>
                     </div>
-                <#--<div class="media mb-4 col-12 hover-blue" onclick="location.href='${viewURL}'" style="cursor: pointer;">
-                    <img <#if curEntry_index == 0>id="img-activity-bottom"</#if> class="img-activity-bottom" src="${smallImageUrl}" alt="fls1.jpg">
-                    <div class="media-body media-body-cacnguonkhac text-left limit-content-bottom d-flex pl-3">
-                        <div class="title-activity-bottom">
-                            <p class="mb-1 mt-2 mt-md-0 cac-nguon-khac-title">${title}</p>
-                            <span class="custom-date-time cac-nguon-khac-time">${createTime} | ${createDay}/${createMonth}/${createYear}</span>
-                        </div>
-                    </div>
-                </div>-->
                 </#if>
             </#list>
         </div>
